--- a/IFAKE_WebApp/requirements.txt
+++ b/IFAKE_WebApp/requirements.txt
@@ -1,4 +1,4 @@
-# Dependências principais
+# Dependências principais do projeto
 Django==3.2.1
 numpy==1.19.5
 scipy==1.6.1
@@ -12,3 +12,8 @@ scikit-image==0.18.1
 scikit-learn==0.24.1
 pdf2image==1.16.0
 tqdm==4.59.0
+
+# Dependências adicionadas para a análise forense de documentos
+PyPDF2==3.0.1
+python-docx==1.1.2
+openpyxl==3.1.2
